--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
     "astro": "^5.7.9"
-  }
+  },
+  "packageManager": "pnpm@9.15.0"
 }
