--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.2.5",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
+    "@fontsource/sansation": "^5.2.1",
     "astro": "^5.7.9"
   },
   "packageManager": "pnpm@9.15.0"
