--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
     "@fontsource/sansation": "^5.2.1",
-    "astro": "^5.7.9"
+    "astro": "^5.7.9",
+    "astro-mermaid": "^1.0.4",
+    "mermaid": "^11.9.0"
   },
   "packageManager": "pnpm@9.15.0"
 }
