--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.2.5",
+    "@astrojs/markdown-remark": "^6.3.3",
+    "@astrojs/mdx": "^4.3.1",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
     "@fontsource/sansation": "^5.2.1",
     "astro": "^5.7.9",
     "astro-mermaid": "^1.0.4",
-    "mermaid": "^11.9.0"
+    "mermaid": "^11.9.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-toc": "^9.0.0"
   },
   "packageManager": "pnpm@9.15.0"
 }
