--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@astrojs/mdx": "^4.3.1",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
-    "@fontsource/sansation": "^5.2.1",
+    "@fontsource/ibm-plex-mono": "^5.2.6",
     "astro": "^5.7.9",
     "astro-mermaid": "^1.0.4",
+    "marked": "^16.1.1",
     "mermaid": "^11.9.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
