--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
     "rehype-slug": "^6.0.0",
     "remark-toc": "^9.0.0"
   },
-  "packageManager": "pnpm@9.15.0"
+  "packageManager": "pnpm@9.15.0",
+  "volta": {
+    "node": "22.17.1"
+  },
+  "devDependencies": {
+    "fast-xml-parser": "^5.2.5"
+  }
 }
